Attempt 1 to fix font weight rendering on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -415,6 +415,10 @@ nav {
 
 
 @media (max-width: 1450px) {
+  body {
+      font-weight: normal!important;
+  }
+
   .homeLinks {
     font-size: 30pt!important;
   }
@@ -511,6 +515,7 @@ nav {
 
   .projectsTitle {
     line-height: 90px!important;
+    font-size: 55px!important
   }
 
   .freecodecampTitle {
@@ -555,6 +560,7 @@ nav {
   .contactText {
     padding-left: 25px!important;
     padding-right: 25px!important;
+    font-weight: 100!important;
   }
 
   .contactTitle {
